Testing/salesforce_demo-hybris-ordermgmt/force-app/main/default/objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <label>Order</label>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>