Testing/salesforce_demo-hybris-ordermgmt/force-app/main/default/objects/Order__c/fields/OrderDate__c.field-meta.xml
<CustomField>
    <fullName>OrderDate__c</fullName>
    <label>orderDate</label>
    <type>Text</type>
    <length>255</length>
</CustomField>