Testing/salesforce_demo-hybris-ordermgmt/force-app/main/default/objects/Order__c/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <label>paid</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>