Testing/salesforce_demo-hybris-ordermgmt/force-app/main/default/objects/Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>status</label>
    <type>Text</type>
    <length>255</length>
</CustomField>