Testing/salesforce_demo-hybris-ordermgmt/force-app/main/default/objects/Order__c/fields/TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount__c</fullName>
    <label>totalAmount</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>